// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Emphasis /> with className matches its snapshot 1`] = `
<em
  className=
      TEST_CLASSNAME
      {
        font-style: italic;
      }
>
  Emphasis text
</em>
`;

exports[`<Emphasis /> with default options matches its snapshot 1`] = `
<em
  className=

      {
        font-style: italic;
      }
>
  Emphasis text
</em>
`;
